# scotbot-transfer-tracker

./: .gitignore  .vercelignore  DATA_API_README.md  Dockerfile  MIGRATION_GUIDE.md  README.md  TESTS.txt  api_client.py  api_index.py  api_requirements.txt  api_vercel.json  app.py  build.sh  data_api.py  deploy-api.ps1  deploy-api.sh  generate-player-stats.py  generate-team-stats.py  generate_player_list.R  generate_player_names.R  generate_player_names.py  hybrid_client.py  index.py  install_and_generate.R  main.py  package.json  player-position-club.txt  player-stats.xlsx  player_names.txt  players_table.sql  pyproject.toml  render.yaml  requirements.txt  team-stats.sql  test_api.py  vercel.json  wsgi.py
.github/workflows/: update-player-list.yml  update-player-names.yml
api/: index.py
api-deploy/: data_api.py
data/: player-stats.sql
static/: style.css
templates/: base.html  home.html  player-stats.html  player.html  team-stats.html  team.html  transfers-link.html  transfers.html
