[tool.poetry]
name = "transfer-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0"
feedparser = "^6.0"
pyahocorasick = "^2.0"
gunicorn = "^23.0.0"
pandas = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"