[tool.poetry]
name = "scotbot"
version = "0.1.0"
description = ""
authors = ["albapepper <albapepper@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0"
feedparser = "^6.0"
pyahocorasick = "^2.0"
gunicorn = "^23.0.0"
pandas = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"